--- a/index.html
+++ b/index.html
@@ -1,2 +1,58 @@
 <!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"><title>Chameleon - openSUSE Design System for Web</title><link href="./dist/images/app-icons/www-16.png" rel="icon" sizes="16x16" type="image/png"><link href="./dist/images/app-icons/www.png" rel="icon" sizes="256x256" type="image/png"><link href="./dist/css/chameleon.css" rel="stylesheet"><link href="./lib/github.css" rel="stylesheet"><link href="./lib/doc.css" rel="stylesheet"></head><body class="d-flex flex-column" style="min-height:100vh;"><nav class="navbar navbar-expand-lg sticky-top"><a class="navbar-brand" href="./"><img src="/favicon.svg" width="30" height="30" class="d-inline-block align-top" alt="openSUSE Logo" title="openSUSE">
-Chameleon</a><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapse"><svg width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M2.5 11.5A.5.5 0 0 1 3 11h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 7h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 3h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"></path></svg></button><div class="collapse navbar-collapse" id="navbar-collapse"><ul class="navbar-nav mr-auto"><li class="nav-item"><a class="nav-link" href="./get-started.html">Get Started</a></li><li class="nav-item"><a class="nav-link" href="./elements.html">Elements</a></li><li class="nav-item"><a class="nav-link" href="./layouts.html">Layouts</a></li><li class="nav-item"><a class="nav-link" href="./components.html">Components</a></li><li class="nav-item"><a class="nav-link" href="./changelog.html">Changelog</a></li><li class="nav-item"><a class="nav-link" href="https://github.com/openSUSE/chameleon">Source Code</a></li></ul></div><button class="navbar-toggler megamenu-toggler" type="button" data-toggle="collapse" data-target="#megamenu"><svg width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4 2H2v2h2V2zm1 12v-2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1zm0-5V7a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1zm0-5V2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1zm5 10v-2a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1zm0-5V7a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1zm0-5V2a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1zM9 2H7v2h2V2zm5 0h-2v2h2V2zM4 7H2v2h2V7zm5 0H7v2h2V7zm5 0h-2v2h2V7zM4 12H2v2h2v-2zm5 0H7v2h2v-2zm5 0h-2v2h2v-2zM12 1a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1h-2zm-1 6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1V7zm1 4a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1h-2z"></path></svg></button></nav><div class="megamenu collapse" id="megamenu"></div><div class="flex-fill py-5"><div class="container text-center"><h1 class="display-4">CHAMELEON</h1><p class="lead">openSUSE Design System for Web</p><hr class="my-4"><div class="row"><div class="col-sm-6 col-md-4 py-3"><p><svg class="icon icon-2x"><use xlink:href="#stack"></use></svg></p><p>Bootstrap 4 &amp; Remix Icon</p></div><div class="col-sm-6 col-md-4 py-3"><p><svg class="icon icon-2x"><use xlink:href="#html5"></use></svg></p><p>Powered by HTML5 &amp; CSS3</p></div><div class="col-sm-6 col-md-4 py-3"><p><svg class="icon icon-2x"><use xlink:href="#pencil-ruler"></use></svg></p><p>openSUSE Branding Guidelines</p></div><div class="col-sm-6 col-md-4 py-3"><p><svg class="icon icon-2x"><use xlink:href="#e-bike-2"></use></svg></p><p>Super Fast &amp; Light Weight</p></div><div class="col-sm-6 col-md-4 py-3"><p><svg class="icon icon-2x"><use xlink:href="#device"></use></svg></p><p>Responsive &amp; Cross-Platform</p></div><div class="col-sm-6 col-md-4 py-3"><p><svg class="icon icon-2x"><use xlink:href="#contrast-2"></use></svg></p><p>Light &amp; Dark Mode Switch</p></div></div><hr class="my-4"><p><a href="https://github.com/opensuse/chameleon/releases"><img src="https://img.shields.io/github/v/release/opensuse/chameleon" alt="version"></a><span>&nbsp;</span><a href="https://github.com/opensuse/chameleon/graphs/pulse"><img src="https://img.shields.io/github/commit-activity/m/opensuse/chameleon" alt="commit activities"></a><span>&nbsp;</span><a href="https://github.com/opensuse/chameleon/graphs/contributors"><img src="https://img.shields.io/github/contributors/opensuse/chameleon" alt="contributors"></a><span>&nbsp;</span><a href="https://l10n.opensuse.org/engage/opensuse-theme-chameleon/?utm_source=widget"><img src="https://l10n.opensuse.org/widgets/opensuse-theme-chameleon/-/master/svg-badge.svg" alt="commit activities"></a><span>&nbsp;</span><a href="https://github.com/openSUSE/chameleon/blob/master/LICENSE"><img src="https://img.shields.io/github/license/opensuse/chameleon" alt="license"></a></p></div></div><footer class="footer"><div class="container">&copy; 2017&ndash;2020 openSUSE contributors</div></footer><script src="./dist/js/jquery.slim.js"></script><script src="./dist/js/bootstrap.bundle.js"></script><script src="./dist/js/chameleon.js"></script><script src="./lib/highlight.js"></script><script src="./lib/doc.js"></script></body></html>
+Chameleon</a><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapse"><svg width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M2.5 11.5A.5.5 0 0 1 3 11h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 7h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 3h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"></path></svg></button><div class="collapse navbar-collapse" id="navbar-collapse"><ul class="navbar-nav mr-auto"><li class="nav-item"><a class="nav-link" href="./">Home</a></li><li class="nav-item"><a class="nav-link" href="./elements.html">Elements</a></li><li class="nav-item"><a class="nav-link" href="./components.html">Components</a></li><li class="nav-item"><a class="nav-link" href="./changelog.html">Changelog</a></li><li class="nav-item"><a class="nav-link" href="https://github.com/openSUSE/chameleon">Source Code</a></li></ul></div><button class="navbar-toggler megamenu-toggler" type="button" data-toggle="collapse" data-target="#megamenu"><svg width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4 2H2v2h2V2zm1 12v-2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1zm0-5V7a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1zm0-5V2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1zm5 10v-2a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1zm0-5V7a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1zm0-5V2a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1zM9 2H7v2h2V2zm5 0h-2v2h2V2zM4 7H2v2h2V7zm5 0H7v2h2V7zm5 0h-2v2h2V7zM4 12H2v2h2v-2zm5 0H7v2h2v-2zm5 0h-2v2h2v-2zM12 1a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1h-2zm-1 6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1V7zm1 4a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1h-2z"></path></svg></button></nav><div class="megamenu collapse" id="megamenu"></div><div class="flex-fill py-5"><div class="container"><div class="row"><div class="col-lg-9 toc-scope"><h1>Chameleon</h1>
+<p>openSUSE Design System for Web.</p>
+<ul>
+<li>Based on <a href="https://getbootstrap.com/">Bootstrap 4</a></li>
+<li>Extend <a href="https://remixicon.com/">Remix Icon</a></li>
+<li>Comply <a href="https://opensuse.github.io/branding-guidelines/">openSUSE Brand Guidelines</a></li>
+<li>Use graphics from <a href="https://github.com/openSUSE/artwork">openSUSE Artwork</a></li>
+<li>Combine <a href="https://opensuse.eosdesignsystem.com/">EOS Design System</a></li>
+</ul>
+<h2>Use CDN</h2>
+<p>Chameleon asset files are hosted at <a href="https://static.opensuse.org">https://static.opensuse.org</a> to improve
+webpage loading speed. This is the most recommended way to use Chameleon.</p>
+<pre><code class="language-html">&lt;!-- Chameleon Style --&gt;
+&lt;link
+  rel=&quot;stylesheet&quot;
+  href=&quot;https://static.opensuse.org/chameleon-3.0/dist/css/chameleon.css&quot;
+/&gt;
+
+&lt;!-- jQuery Slim --&gt;
+&lt;script
+  src=&quot;https://static.opensuse.org/chameleon-3.0/dist/js/jquery.slim.js&quot;
+  defer
+&gt;&lt;/script&gt;
+&lt;!-- Bootstrap Script --&gt;
+&lt;script
+  src=&quot;https://static.opensuse.org/chameleon-3.0/dist/js/bootstrap.bundle.js&quot;
+  defer
+&gt;&lt;/script&gt;
+&lt;!-- Chameleon Script --&gt;
+&lt;script
+  src=&quot;https://static.opensuse.org/chameleon-3.0/dist/js/chameleon.js&quot;
+  defer
+&gt;&lt;/script&gt;
+</code></pre>
+<h2>Use NPM</h2>
+<p>If the website requires a lot of SaSS variables and mixins from Chameleon and
+Bootstrap, then you need to install the package locally.</p>
+<pre><code class="language-bash">npm install --save @opensuse/chameleon
+</code></pre>
+<p>Here are different build system you can use: Webpack, Gulp, Grunt, Rollup. But
+ways to import SCSS and JS files are similiar.</p>
+<pre><code class="language-scss">// SCSS
+@import &quot;@opensuse/chameleon&quot;;
+</code></pre>
+<pre><code class="language-js">// CJS
+require(&quot;@opensuse/chameleon&quot;);
+// ES6
+import &quot;@opensuse/chameleon&quot;;
+</code></pre>
+<h2>Examples</h2>
+<p>Here are already several websites integrated with Chameleon.</p>
+<ul>
+<li><a href="https://news.opensuse.org">https://news.opensuse.org</a></li>
+<li><a href="https://en.opensuse.org/">https://en.opensuse.org/</a></li>
+<li><a href="https://software.opensuse.org/">https://software.opensuse.org/</a></li>
+</ul>
+</div><div class="toc-sidebar col-lg-3 d-none d-lg-block"><div class="toc"></div></div></div></div></div><footer class="footer"><div class="container">&copy; 2017&ndash;2020 openSUSE contributors</div></footer><script src="./dist/js/jquery.slim.js"></script><script src="./dist/js/bootstrap.bundle.js"></script><script src="./dist/js/chameleon.js"></script><script src="./lib/highlight.js"></script><script src="./lib/doc.js"></script></body></html>
